--- a/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
+++ b/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "COPADS_Project_2": {
       "commandName": "Project",
-      "commandLineArgs": "1024"
+      "commandLineArgs": "1024 2"
     }
   }
 }
