Changed the project to include Object Oriented styles, created a class to handle prime functions, added documentation.

--- a/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
+++ b/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "COPADS_Project_2": {
-      "commandName": "Project",
-      "commandLineArgs": "1024 2"
+      "commandName": "Project"
     }
   }
 }
