The code has been somewhat simplified. Still needs to fixed for 3 problems, printing way too many prime numbers, properly displaying 7 significant digits for the milliseconds, and

--- a/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
+++ b/COPADS_Project_2/COPADS_Project_2/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "COPADS_Project_2": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "32 2"
     }
   }
 }
